# ragrep

./: .gitignore  AGENTS.md  CNAME  MANIFEST.in  README.md  TODO.md  env.example  index.html  main.py  pyproject.toml  requirements.txt  setup.py  test_chromadb.py  test_chromadb_issue.py  test_local.py  test_poc.py  test_python38.py  test_python38_compat.py  test_python39.py  test_python39_compat.py
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml  test.yml
docs/: README.md
examples/: basic_usage.py
src/ragrep/: __init__.py  cli.py
src/ragrep/core/: __init__.py  document_processor.py  file_scanner.py  rag_system.py
src/ragrep/generation/: __init__.py  text_generator.py
src/ragrep/retrieval/: __init__.py  embeddings.py  vector_store.py
tests/: test_cli.py  test_embeddings.py  test_ragrep.py
