[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragrep"
version = "0.2.0"
description = "Local semantic code recall with mxbai-embed-large and SQLite"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "RAGrep Team", email = "ragrep@example.com"}
]
keywords = ["semantic-search", "embeddings", "sqlite", "ollama", "code-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.2.0",
    "twine>=5.0.0",
]

[project.scripts]
ragrep = "ragrep.cli:main"

[project.urls]
Homepage = "https://github.com/pierce403/ragrep"
Repository = "https://github.com/pierce403/ragrep"
Issues = "https://github.com/pierce403/ragrep/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
